--- a/html/index.html
+++ b/html/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./style/style.css">
-    <script src="./script/main.js" defer></script>
+    <link rel="stylesheet" href="../style/style.css">
+    <script src="../script/main.js" defer></script>
     <title>Document</title>
 </head>
 <body>
@@ -13,15 +13,15 @@
     </header>
     <main>
         <section id="CRM" class="btn">
-            <img src="./img/crm.jpg" alt="crmimg">
+            <img src="../img/crm.jpg" alt="crmimg">
             <p>CRM</p>
         </section>
         <section id="SPR" class="btn">
-            <img src="./img/money.jpg" alt="sprzedazimg">
+            <img src="../img/money.jpg" alt="sprzedazimg">
             <p>SPRZEDAŻ</p>
         </section>
         <section id="HR" class="btn">
-            <img src="./img/hr.jpg" alt="hrimg">
+            <img src="../img/hr.jpg" alt="hrimg">
             <p>HR</p>
         </section>
     </main>
