--- a/html/index.html
+++ b/html/index.html
@@ -5,26 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/style.css">
     <script src="../script/main.js" defer></script>
-    <title>Document</title>
+    <title>DSERP V3</title>
 </head>
 <body>
     <header>
-        <h1>DE SAFEST ERP V3</h1>
+        <h1>DA SAFEST ERP V3</h1>
     </header>
     <main>
         <section id="CRM" class="btn">
-            <img src="../img/crm.jpg" alt="crmimg">
+            <img src="../img/blacks/crm_b.jpg" alt="crmimg">
             <p>CRM</p>
         </section>
         <section id="SPR" class="btn">
-            <img src="../img/money.jpg" alt="sprzedazimg">
+            <img src="../img/blacks/money_b.jpg" alt="sprzedazimg">
             <p>SPRZEDAŻ</p>
         </section>
         <section id="HR" class="btn">
-            <img src="../img/hr.jpg" alt="hrimg">
+            <img src="../img/blacks/hr_b.jpg" alt="hrimg">
             <p>HR</p>
         </section>
     </main>
-    <footer><p>&copy;DE SAFEST ERP INC</p></footer>
+    <footer><p>&copy;DA SAFEST ERP INC</p></footer>
 </body>
 </html>
