ico ico ico pl index.html

--- a/html/index.html
+++ b/html/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../style/style.css">
     <script src="../script/main.js" defer></script>
+    <link rel="icon" type="image/x-icon" href="../img/blacks/logo_b.ico">
     <title>DSERP V3</title>
 </head>
 <body>
     <header>
-        <h1>DA SAFEST ERP V3</h1>
+        <h1>DSERP V3</h1>
     </header>
     <main>
         <section id="CRM" class="btn">
@@ -25,6 +26,6 @@
             <p>HR</p>
         </section>
     </main>
-    <footer><p>&copy;DA SAFEST ERP INC</p></footer>
+    <footer><p>&copy;DSERP INC</p></footer>
 </body>
 </html>
