--- a/html/index.html
+++ b/html/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style/style.css">
-    <script src="../script/main.js" defer></script>
+    <link rel="stylesheet" href="../style/index.css">
+    <script src="../script/index.js" defer></script>
     <link rel="icon" type="image/x-icon" href="../img/blacks/logo_b.ico">
     <title>DSERP V3</title>
 </head>
