Dodawanie usera z formularza pod losowym id - EXTREMELY SCUFFED FRONTEND

--- a/html/index.html
+++ b/html/index.html
@@ -26,6 +26,7 @@
             <p>HR</p>
         </section>
     </main>
+    <a href="../php/crm.php">go to crm</a>
     <footer><p>&copy;DSERP INC</p></footer>
 </body>
 </html>
