--- a/html/crm.html
+++ b/html/crm.html
@@ -10,13 +10,16 @@
     <header>
         <h1>CRM</h1>
     </header>
-    <form action="POST">
+    <form action="#" method="POST">
         <label for="imie">Imie:</label><br>
         <input type="text" name="imie" placeholder="Spejson"><br>
         <label for="email">E-mail:</label><br>
         <input type="text" name="email"><br>
         <label for="status">Subskrybcja?    </label>
-        <input type="checkbox">
+        <input type="checkbox" name="status" value="1">
+
+
+        <input type="submit" value="DODAJ USERA">
     </form>
     <footer><p>&copy;DSERP INC</p></footer>
 </body>
