Wyswietlanie wszystkich userow - EXTREMELY SCUFFED FRONTEND

--- a/html/index.html
+++ b/html/index.html
@@ -26,7 +26,10 @@
             <p>HR</p>
         </section>
     </main>
-    <a href="../php/crm.php">go to crm</a>
+    <a href="../php/crm.php?module=create">go to crm</a>
+    <br>
+    <a href="../php/crm.php?module=read">go to crmread</a>
+
     <footer><p>&copy;DSERP INC</p></footer>
 </body>
 </html>
