--- a/html/crm.html
+++ b/html/crm.html
@@ -21,6 +21,12 @@
 
         <input type="submit" value="DODAJ USERA">
     </form>
+
+
+    <a href="../php/crm.php?module=read">go to crmread</a>
+    <br>
+    
+    <a href="../php/">go to main</a>
     <footer><p>&copy;DSERP INC</p></footer>
 </body>
 </html>
