--- a/html/crm.html
+++ b/html/crm.html
@@ -10,22 +10,17 @@
     <header>
         <h1>CRM</h1>
     </header>
-    <form action="#" method="POST">
-        <label for="imie">Imie:</label><br>
-        <input type="text" name="imie" placeholder="Spejson"><br>
-        <label for="email">E-mail:</label><br>
-        <input type="text" name="email"><br>
-        <label for="status">Subskrybcja?    </label>
-        <input type="checkbox" name="status" value="1">
+    
 
-
-        <input type="submit" value="DODAJ USERA">
-    </form>
-
+    <a href="../php/crm.php?module=create">go to crmcreate</a>
+    <br>
 
     <a href="../php/crm.php?module=read">go to crmread</a>
     <br>
-    
+
+    <a href="../php/crm.php?module=update">go to crmupdate</a>
+    <br>
+
     <a href="../php/">go to main</a>
     <footer><p>&copy;DSERP INC</p></footer>
 </body>
