--- a/php/sprzedaz/sprzedaz_query_select.html
+++ b/php/sprzedaz/sprzedaz_query_select.html
@@ -14,5 +14,9 @@
     <label for="date1">Druga data: </label>
     <input type="date" name="date2">
     <br>
-    <input type="submit" value="WYKONAJ KWERENDĘ">
+    <div id="fbts_end">
+        <input type="submit" class="fbts" value="Dodaj kwerende">
+        <input type="reset" class="fbts" value="Wyczyść">
+        </div>
+        <a id="back" id="backbtn"href="index.php">↶</a>
 </form>
