--- a/php/sprzedaz/sprzedaz_update_search.html
+++ b/php/sprzedaz/sprzedaz_update_search.html
@@ -6,5 +6,9 @@
     <input type="checkbox" checked name="mode" value="search">
     <br>
 
-    <input type="submit" value="ZMIEN SPRZEDAZ">
+    <div id="fbts_end">
+        <input type="submit" class="fbts" value="Zmien Sprzedaz">
+        <input type="reset" class="fbts" value="Wyczyść">
+        </div>
+        <a id="back" id="backbtn"href="index.php">↶</a>
 </form>
