--- a/php/sprzedaz/sprzedaz_update_search.html
+++ b/php/sprzedaz/sprzedaz_update_search.html
@@ -10,5 +10,5 @@
         <input type="submit" class="fbts" value="Zmien Sprzedaz">
         <input type="reset" class="fbts" value="Wyczyść">
         </div>
-        <a id="back" id="backbtn"href="index.php">↶</a>
+        <a id="backbtn"href="index.php">↶</a>
 </form>
