chipi chipi chapa chapa dubi dubi daba daba asdjas

--- a/html/crm.html
+++ b/html/crm.html
@@ -21,7 +21,7 @@
     <a href="../php/crm.php?module=update">go to crmupdate</a>
     <br>
 
-    <a href="../php/">go to main</a>
+    <a href="../php">go to main</a>
     <footer><p>&copy;DSERP INC</p></footer>
 </body>
 </html>
