--- a/html/crmadd.html
+++ b/html/crmadd.html
@@ -27,7 +27,7 @@
     <br>
 
 
-    <a href="../php/">go to main</a>
+    <a href="../php">go to main</a>
     <footer><p>&copy;DSERP INC</p></footer>
 </body>
 </html>
