--- a/php/crm/crm_query_select.html
+++ b/php/crm/crm_query_select.html
@@ -5,5 +5,5 @@
         <option value="1">Pokaż wszystkie emaile klientów</option>
     </select>
     <br>
-    <input type="submit" value="WYKONAJ KWERENDĘ">
+    <input type="submit" class="fbts" style="margin-top: 0.5vw" value="Wykonaj Kwerendę">
 </form>
