--- a/php/crm/crm_update_search.html
+++ b/php/crm/crm_update_search.html
@@ -6,5 +6,5 @@
     <input type="checkbox" checked name="mode" value="search">
     <br>
 
-    <input type="submit" value="ZMIEN USERA">
+    <input class="fbts" type="submit" value="Zmień Usera">
 </form>
