chipi chipi chapa chapa dubi dubi daba daba

--- a/php/crm/crm_update_search.html
+++ b/php/crm/crm_update_search.html
@@ -6,5 +6,8 @@
     <input type="checkbox" checked name="mode" value="search">
     <br>
 
-    <input class="fbts" type="submit" value="Zmień Usera">
+    <div id="fbts_end">
+    <input type="submit" class="fbts" value="Zmień Usera">
+    <input type="reset" class="fbts" value="Wyczyść">
+</div>
 </form>
