--- a/php/hr/hr_query_select.html
+++ b/php/hr/hr_query_select.html
@@ -13,5 +13,5 @@
     <br>
     <input type="number" min="1" max="6" name="clearance">
     <br>
-    <input type="submit" value="WYKONAJ KWERENDĘ">
+    <input type="submit" value="Wykonaj Kwerendę">
 </form>
