i jakos to juz wyglada

--- a/php/sprzedaz/sprzedaz_query_select.html
+++ b/php/sprzedaz/sprzedaz_query_select.html
@@ -15,8 +15,7 @@
     <input type="date" name="date2">
     <br>
     <div id="fbts_end">
-        <input type="submit" class="fbts" value="Dodaj kwerende">
+        <input type="submit" class="fbts" value="Wykonaj kwerende">
         <input type="reset" class="fbts" value="Wyczyść">
         </div>
-        <a id="back" id="backbtn"href="index.php">↶</a>
 </form>
