--- a/php/sprzedaz/sprzedaz_update_search.html
+++ b/php/sprzedaz/sprzedaz_update_search.html
@@ -7,8 +7,7 @@
     <br>
 
     <div id="fbts_end">
-        <input type="submit" class="fbts" value="Zmien Sprzedaz">
+        <input type="submit" class="fbts" value="Zmień Sprzedaż">
         <input type="reset" class="fbts" value="Wyczyść">
         </div>
-        <a id="backbtn"href="index.php">↶</a>
 </form>
