--- a/php/hr/hr_query_select.html
+++ b/php/hr/hr_query_select.html
@@ -13,5 +13,8 @@
     <br>
     <input type="number" min="1" max="6" name="clearance">
     <br>
-    <input type="submit" value="Wykonaj Kwerendę">
+    <div id="fbts_end">
+        <input type="submit" class="fbts" value="Wykonaj Kwerendę">
+        <input type="reset" class="fbts" value="Wyczyść">
+    </div>
 </form>
