--- a/php/hr/hr_update_search.html
+++ b/php/hr/hr_update_search.html
@@ -6,5 +6,8 @@
     <input type="checkbox" checked name="mode" value="search">
     <br>
 
-    <input type="submit" value="ZMIEN PRACOWNIKA">
+    <div id="fbts_end">
+        <input type="submit" class="fbts" value="Zmień Pracownika">
+        <input type="reset" class="fbts" value="Wyczyść">
+    </div>
 </form>
